--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -220,6 +220,7 @@ textarea {
             svg {
                 width: 13px;
                 height: 13px;
+                pointer-events: none;
                 path {
                     fill: $black;
                 }
