--- a/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="form-control__with-helptext js-validation">{{ form.titel|render_rotterdam_formulier }}</div>
                         <div class="form-control__with-helptext js-validation padding-bottom-2x"
-                             data-testid="text_editor"
+                             data-testid="text_area"
                              data-berichten-beheer-target="notificatie hideable">
                             {{ form.korte_beschrijving|render_rotterdam_formulier }}
                         </div>
