fix: andere gebruikers in melding detail

--- a/app/apps/main/templates/melding/melding_gebruiker_actief.html
+++ b/app/apps/main/templates/melding/melding_gebruiker_actief.html
@@ -5,7 +5,8 @@
          data-meldingGebruiker-gebruiker-value="{{ GEBRUIKER|json_encode }}"
          data-meldingGebruiker-mercure-subscriber-token-value="{{ MERCURE_SUBSCRIBER_TOKEN }}"
          class="section--seperated"
-         data-testid="">
+         data-testid=""
+         style="display: none">
     <div class="alert alert--warning">
         <span>
             <svg width="32"
