--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -44,6 +44,7 @@
                 }
 
                 .content {
+                    visibility: hidden;
                     position: absolute;
                     display: block;
                     top: 2em;
@@ -85,6 +86,7 @@
 
                 &.show {
                     .content {
+                        visibility: visible;
                         opacity: 1;
                         transform: scale(1, 1);
                         pointer-events: all;
