Styling bell-icons notificationcenter

--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal_ongelezen.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal_ongelezen.html
@@ -1,8 +1,9 @@
 <turbo-stream action="update" target="snack_overzicht_aantal_ongelezen">
 <template>
     <div class="notification__background">
+        <span class="active">{% include "icons/notification-alert.svg" %}</span>
+        <span class="inactive">{% include "icons/notification-alert-open.svg" %}</span>
         {% if aantal > 0 %}
-            {% include "icons/notification-alert.svg" %}
             <span class="badge-count">
                 {% if aantal > 0 %}
                     {% if aantal < 101 %}
@@ -12,8 +13,6 @@
                     {% endif %}
                 {% endif %}
             </span>
-        {% else %}
-            <span>{% include "icons/notification-alert-open.svg" %}</span>
         {% endif %}
     </div>
 </template>
