--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -27,13 +27,7 @@
             .container__uitklapper {
                 position: unset;
                 flex: 1;
-                &:focus,
-                &:hover {
-                    .trigger--notificationslist {
-                        cursor: pointer;
-                        background-color: $white;
-                    }
-                }
+
                 > span {
                     font-weight: 700;
                     text-decoration: none;
@@ -90,6 +84,23 @@
                         opacity: 1;
                         transform: scale(1, 1);
                         pointer-events: all;
+                    }
+                }
+
+                &:focus,
+                &:hover {
+                    .trigger--notificationslist {
+                        cursor: pointer;
+                        background-color: $white;
+                    }
+                }
+                &.show,
+                &:focus {
+                    outline: none;
+                    .trigger--notificationslist {
+                        .active {
+                            opacity: 1;
+                        }
                     }
                 }
             }
@@ -156,9 +167,23 @@
     background-color: transparent;
     transition: background-color $transition-duration-default $transition-ease-default;
 
+    .active,
+    .inactive {
+        position: absolute;
+        left: 50%;
+        right: 50%;
+        transform: translate(-50%, -50%);
+        display: block;
+        width: 16px;
+        height: 16px;
+    }
+
+    .active {
+        opacity: 0;
+        transition: opacity $transition-duration-default $transition-ease-default;
+    }
+
     svg {
-        flex: 1;
-        vertical-align: middle;
         path {
             fill: $black;
         }
