--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -72,6 +72,7 @@
                     }
                     li {
                         margin-bottom: 1px;
+                        margin-right: 0;
                     }
                     span {
                         font-size: 0.87em;
@@ -166,6 +167,10 @@
     text-align: center;
     background-color: transparent;
     transition: background-color $transition-duration-default $transition-ease-default;
+
+    .notification__background {
+        pointer-events: none;
+    }
 
     .active,
     .inactive {
