--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -184,6 +184,7 @@
             }
 
             .container__content {
+                font-size: 0.8em;
                 .container__message {
                     display: flex;
                     gap: 1em;
