--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -81,9 +81,11 @@
           data-notificaties--manager-topic-snack-value="/notificaties/snack/"
           data-notificaties--manager-token-value="{{ MERCURE_SUBSCRIBER_TOKEN }}">
         <a href="#id_maincontent" class="skiplink">Ga direct naar de content</a>
-        <turbo-frame src="{% url 'snack_lijst' %}" id="tf_snack_lijst">
-        </turbo-frame>
-        <turbo-frame src="{% url 'toast_lijst' %}" id="tf_toast_lijst"></turbo-frame>
+        {% if request.user.is_authenticated %}
+            <turbo-frame src="{% url 'snack_lijst' %}" id="tf_snack_lijst">
+            </turbo-frame>
+            <turbo-frame src="{% url 'toast_lijst' %}" id="tf_toast_lijst"></turbo-frame>
+        {% endif %}
         <div class="container__toplevel">
             {% block aside %}
                 {% include "snippets/aside.html" %}
