--- a/app/apps/main/templates/melding/melding_pauzeren.html
+++ b/app/apps/main/templates/melding/melding_pauzeren.html
@@ -9,7 +9,7 @@
             <button type="button"
                     class="btn-close"
                     aria-label="Sluit"
-                    data-action="detail#closeModal"></button>
+                    data-action="modal#closeModal"></button>
             <h1>
                 <span>Melding pauzeren</span>
             </h1>
@@ -69,8 +69,8 @@
                         <div class="form-row btn-row">
                             <button type="reset"
                                     class="btn btn-tertiary"
-                                    data-action="detail#closeModal"
-                                    data-detail-target="modalAfhandelen">
+                                    data-action="modal#closeModal"
+                                    data-modal-target="modal">
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit"
