--- a/app/apps/main/templates/melding/melding_spoed_veranderen.html
+++ b/app/apps/main/templates/melding/melding_spoed_veranderen.html
@@ -9,7 +9,7 @@
             <button type="button"
                     class="btn-close"
                     aria-label="Sluit"
-                    data-action="detail#closeModal"></button>
+                    data-action="modal#closeModal"></button>
             <h1>
                 <span>Melding
                     {% if melding.urgentie >= .5 %}niet{% endif %}
@@ -33,8 +33,8 @@
                             <button type="reset"
                                     class="btn btn-tertiary"
                                     data-controller="detail"
-                                    data-action="detail#closeModal"
-                                    data-detail-target="modalAfhandelen">
+                                    data-action="modal#closeModal"
+                                    data-modal-target="modal">
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit" class="btn btn-action">
