--- a/app/apps/main/templates/melding/part_locatie_aanpassen.html
+++ b/app/apps/main/templates/melding/part_locatie_aanpassen.html
@@ -2,6 +2,8 @@
 {% load vind_in_dict from querystring_tags %}
 {% load json_encode from json_tags %}
 {% load context_template from context_tags %}
+{% load melding_taken from melding_tags %}
+{% melding_taken melding as taak_info %}
 <turbo-frame id="melding_actie_form">
 <div class="modal-dialog">
     <div class="modal-content">
@@ -9,7 +11,7 @@
             <button type="button"
                     class="btn-close"
                     aria-label="Sluit"
-                    data-action="detail#closeModal"></button>
+                    data-action="modal#closeModal"></button>
             <h1>
                 <span>Locatie aanpassen</span>
             </h1>
@@ -31,7 +33,7 @@
         <div class="modal-body">
             <section class="section--seperated" data-testid="detailReporter">
                 <div class="container__details">
-                    {% if aantal_actieve_taken > 0 %}
+                    {% if taak_info.aantal_actieve_taken > 0 %}
                         <div class="alert alert--warning">
                             <span>
                                 <svg width="32"
@@ -44,17 +46,17 @@
                             </span>
                             <div>
                                 Deze melding bevat de volgende openstaande
-                                {% if aantal_actieve_taken == 1 %}
+                                {% if taak_info.aantal_actieve_taken == 1 %}
                                     taak
                                 {% else %}
                                     taken
                                 {% endif %}
                                 :
                                 <ul>
-                                    {% for taak in actieve_taken %}<li>{{ taak.titel }}</li>{% endfor %}
+                                    {% for taak in taak_info.actieve_taken %}<li>{{ taak.titel }}</li>{% endfor %}
                                 </ul>
                                 <span>Als de locatie wordt aangepast wordt de locatie van deze
-                                    {% if aantal_actieve_taken == 1 %}
+                                    {% if taak_info.aantal_actieve_taken == 1 %}
                                         taak
                                     {% else %}
                                         taken
@@ -132,8 +134,8 @@
                             <div class="form-row btn-row">
                                 <button type="reset"
                                         class="btn btn-tertiary"
-                                        data-detail-target="modalAfhandelen"
-                                        data-action="detail#closeModal">
+                                        data-modal-target="modal"
+                                        data-action="modal#closeModal">
                                     <span>Annuleren</span>
                                 </button>
                                 <button disabled
