--- a/app/apps/context/templates/benc/melding_detail_acties.html
+++ b/app/apps/context/templates/benc/melding_detail_acties.html
@@ -1,10 +1,17 @@
-<div class="container__actions">
+{% extends "snippets/turbo_stream_wrapper.html" %}
+{% load melding_taken from melding_tags %}
+<!-- djlint:off -->
+{% block action %}update{% endblock action %}
+{% block target %}melding_detail_acties{% endblock target %}
+<!-- djlint:on -->
+{% block content %}
+    {% melding_taken melding as taak_info %}
     <p>
         {% if perms.authorisatie.taak_aanmaken and taaktypes and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
             <button type="button"
                     class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{% else %}action{% endif %}"
                     data-action="detail#openModal"
-                    data-detail-action-param="{% url 'taak_starten' melding.uuid %}">
+                    data-modal-action-param="{% url 'taak_starten' melding.uuid %}">
                 <span>Start taak</span>
             </button>
         {% endif %}
@@ -12,7 +19,7 @@
             <button type="button"
                     class="btn btn-{% if melding.status.naam == 'controle' %}action{% else %}tertiary{% endif %}"
                     data-action="detail#openModal"
-                    data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}">
+                    data-modal-action-param="{% url 'melding_afhandelen' melding.uuid %}">
                 <span>Melding afhandelen</span>
             </button>
         {% endif %}
@@ -21,19 +28,19 @@
             <button type="button"
                     class="btn btn-tertiary"
                     data-action="detail#openModal"
-                    data-detail-action-param="{% url 'melding_heropenen' melding.uuid %}">
+                    data-modal-action-param="{% url 'melding_heropenen' melding.uuid %}">
                 <span>Melding heropenen</span>
             </button>
         {% endif %}
     </p>
     <ul class="list-links">
-        {% if open_taakopdrachten %}
+        {% if taak_info.open_taken %}
             {% if perms.authorisatie.taak_afronden %}
                 <li>
                     <button type="button"
                             class="btn btn-icon btn-textlink"
                             data-action="detail#openModal"
-                            data-detail-action-param="{% url 'taak_afronden' melding.uuid %}">
+                            data-modal-action-param="{% url 'taak_afronden' melding.uuid %}">
                         <svg width="18"
                              height="18"
                              viewBox="0 0 55 43"
@@ -50,7 +57,7 @@
                     <button type="button"
                             class="btn btn-icon btn-textlink"
                             data-action="detail#openModal"
-                            data-detail-action-param="{% url 'taak_annuleren' melding.uuid %}">
+                            data-modal-action-param="{% url 'taak_annuleren' melding.uuid %}">
                         <svg width="18"
                              height="18"
                              viewBox="0 0 18 18"
@@ -69,7 +76,7 @@
                     <button type="button"
                             class="btn btn-icon btn-textlink"
                             data-action="detail#openModal"
-                            data-detail-action-param="{% url 'melding_annuleren' melding.uuid %}">
+                            data-modal-action-param="{% url 'melding_annuleren' melding.uuid %}">
                         <svg width="18"
                              height="18"
                              viewBox="0 0 18 18"
@@ -83,4 +90,4 @@
             {% endif %}
         {% endif %}
     </ul>
-</div>
+{% endblock content %}
