--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -6,7 +6,7 @@
 {% load context_template from context_tags %}
 {% load slice_iterable python_any from main_tags %}
 {% load mor_core_url replace_n from main_tags %}
-{% load render_onderwerp get_bijlagen from melding_tags %}
+{% load render_onderwerp get_bijlagen melding_taken from melding_tags %}
 {% load json_encode from json_tags %}
 {% block title %}
     Melding
@@ -75,45 +75,8 @@
                                                 <span class="help-text">{{ meldingen_index }} van {{ request.session.melding_count }}</span>
                                             {% endif %}
                                         </div>
-                                        <div class="padding--left">
-                                            {% if melding.status %}
-                                                <span class="badge badge--{% if melding.status.naam == 'afgehandeld' %}green{% elif melding.status.naam == 'controle' %}yellow{% elif melding.status.naam == 'in_behandeling' %}darkblue{% elif melding.status.naam == 'geannuleerd' %}red{% else %}lightblue{% endif %}">{{ melding.status.naam|vertaal }}
-                                                    {% if melding.status.naam == 'afgehandeld' or melding.status.naam == 'geannuleerd' %}
-                                                        ({{ melding.resolutie }})
-                                                    {% endif %}
-                                                </span>
-                                            {% endif %}
-                                            {% if aantal_actieve_taken %}
-                                                <span class="badge badge--darkblue" data-testid="taakActief">{{ aantal_actieve_taken }}
-                                                    {% if aantal_actieve_taken > 1 %}
-                                                        taken
-                                                    {% else %}
-                                                        taak
-                                                    {% endif %}
-                                                actief</span>
-                                            {% else %}
-                                                <span class="badge badge--darkblue" data-testid="taakActief">0 taken actief</span>
-                                            {% endif %}
-                                            {% if aantal_opgeloste_taken %}
-                                                <span class="badge badge--darkblue" data-testid="taakOpgelost">{{ aantal_opgeloste_taken }}
-                                                    {% if aantal_opgeloste_taken > 1 %}
-                                                        taken
-                                                    {% else %}
-                                                        taak
-                                                    {% endif %}
-                                                opgelost</span>
-                                            {% else %}
-                                                <span class="badge badge--darkblue" data-testid="taakOpgelost">0 taken opgelost</span>
-                                            {% endif %}
-                                            {% if aantal_niet_opgeloste_taken %}
-                                                <span class="badge badge--red" data-testid="taakNietOpgelost">{{ aantal_niet_opgeloste_taken }}
-                                                    {% if aantal_niet_opgeloste_taken > 1 %}
-                                                        taken
-                                                    {% else %}
-                                                        taak
-                                                    {% endif %}
-                                                niet opgelost</span>
-                                            {% endif %}
+                                        <div class="padding--left" id="melding_detail_header_status">
+                                            {% include "melding/detail/header_status.html" with melding=melding only %}
                                         </div>
                                     </div>
                                 </div>
@@ -410,7 +373,9 @@
                                     </div>
                                     <div class="grid-item aside">
                                         {% include "melding/melding_gebruiker_actief.html" %}
-                                        {% include acties_template %}
+                                        <div class="container__actions"
+                                             data-detail-target="containerActions"
+                                             id="melding_detail_acties">{% include acties_template %}</div>
                                         {% if melding.signalen_voor_melding|length > 1 %}
                                             <div class="alert alert--info">
                                                 <span>
@@ -450,8 +415,9 @@
                                             </div>
                                         </section>
                                         <section class="section--seperated {% if melding.status.naam is 'afgehandeld' or melding.status.naam is not 'geannuleerd' %}no-padding{% endif %}"
-                                                 data-testid="detailTijdlijn">
-                                            {% include "melding/part_tijdlijn.html" %}
+                                                 data-testid="detailTijdlijn"
+                                                 id="melding_detail_tijdlijn">
+                                            {% include "melding/detail/tijdlijn.html" with melding=melding only %}
                                         </section>
                                     </div>
                                 </div>
@@ -463,13 +429,11 @@
                                 Terug naar boven
                             </button>
                         </div>
-                        <div class="modal"
-                             data-detail-target="modalAfhandelen"
-                             id="meldingDetailModal">
+                        <div class="modal" data-modal-target="modal" id="meldingDetailModal">
                             <div class="modal-backdrop modal-exit"
                                  id="modal-backdrop"
-                                 data-action="click->detail#closeModal"></div>
-                            <turbo-frame id="melding_actie_form" class="turboframe-container" data-detail-target="turboActionModal">
+                                 data-action="click->modal#closeModal"></div>
+                            <turbo-frame id="melding_actie_form" class="turboframe-container" data-modal-target="turboActionModal">
                             </turbo-frame>
                         </div>
                         <div class="modal modal--images"
