--- a/app/apps/main/templates/melding/part_gebruiker_info.html
+++ b/app/apps/main/templates/melding/part_gebruiker_info.html
@@ -8,7 +8,7 @@
             <button type="button"
                     class="btn-close"
                     aria-label="Sluit"
-                    data-action="detail#closeModal"></button>
+                    data-action="modal#closeModal"></button>
         </div>
         <div class="modal-body">
             {% if perms.authorisatie.medewerker_gegevens_bekijken %}
