--- a/app/apps/main/templates/melding/part_melding_afhandelen.html
+++ b/app/apps/main/templates/melding/part_melding_afhandelen.html
@@ -2,6 +2,8 @@
 {% load vind_in_dict from querystring_tags %}
 {% load json_encode from json_tags %}
 {% load context_template from context_tags %}
+{% load melding_taken from melding_tags %}
+{% melding_taken melding as taak_info %}
 {% context_template "melding_afhandelen_omschrijving_extern.html" as omschrijving_extern_template %}
 {% context_template "melding_afhandelen_terugkoppeling_gewenst.html" as terugkoppeling_gewenst_template %}
 <turbo-frame id="melding_actie_form">
@@ -11,7 +13,7 @@
             <button type="button"
                     class="btn-close"
                     aria-label="Sluit"
-                    data-action="detail#closeModal"></button>
+                    data-action="modal#closeModal"></button>
             <h1>
                 <span>Melding afhandelen</span>
             </h1>
@@ -20,7 +22,7 @@
             <section class="section--seperated" data-testid="detailReporter">
                 <div class="container__details">
                     {% include terugkoppeling_gewenst_template %}
-                    {% if aantal_actieve_taken > 0 %}
+                    {% if taak_info.aantal_actieve_taken > 0 %}
                         <div class="alert alert--warning">
                             <span>
                                 <svg width="32"
@@ -33,17 +35,17 @@
                             </span>
                             <div>
                                 Deze melding bevat de volgende openstaande
-                                {% if aantal_actieve_taken == 1 %}
+                                {% if taak_info.aantal_actieve_taken == 1 %}
                                     taak
                                 {% else %}
                                     taken
                                 {% endif %}
                                 :
                                 <ul>
-                                    {% for taak in actieve_taken %}<li>{{ taak.titel }}</li>{% endfor %}
+                                    {% for taak in taak_info.actieve_taken %}<li>{{ taak.titel }}</li>{% endfor %}
                                 </ul>
                                 <span>Als de melding wordt afgehandeld wordt de status van deze
-                                    {% if aantal_actieve_taken == 1 %}
+                                    {% if taak_info.aantal_actieve_taken == 1 %}
                                         taak
                                     {% else %}
                                         taken
@@ -66,8 +68,8 @@
                         <div class="form-row btn-row">
                             <button type="reset"
                                     class="btn btn-tertiary"
-                                    data-action="detail#closeModal"
-                                    data-detail-target="modalAfhandelen">
+                                    data-action="modal#closeModal"
+                                    data-modal-target="modal">
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit" class="btn btn-action">
