--- a/app/apps/main/templates/melding/part_taak_afronden.html
+++ b/app/apps/main/templates/melding/part_taak_afronden.html
@@ -11,7 +11,7 @@
             <button type="button"
                     class="btn-close"
                     aria-label="Sluit"
-                    data-action="detail#closeModal"></button>
+                    data-action="modal#closeModal"></button>
         </div>
         <div class="modal-body">
             {% if form.taakopdracht %}
@@ -29,8 +29,8 @@
                     <div class="form-row btn-row">
                         <button type="reset"
                                 class="btn btn-tertiary"
-                                data-action="detail#closeModal"
-                                data-detail-target="modalAfhandelen">
+                                data-action="modal#closeModal"
+                                data-modal-target="modal">
                             <span>Annuleren</span>
                         </button>
                         <button type="submit" class="btn btn-action">
