--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -20,7 +20,7 @@
             <button type="button"
                     class="btn-close"
                     aria-label="Sluit"
-                    data-action="detail#closeModal"></button>
+                    data-action="modal#closeModal"></button>
         </div>
         <div class="modal-body">
             <form action="{% url 'taak_starten' melding.uuid %}"
@@ -86,8 +86,8 @@
                         <div class="form-row btn-row">
                             <button type="reset"
                                     class="btn btn-tertiary"
-                                    data-action="detail#closeModal"
-                                    data-detail-target="modalAfhandelen">
+                                    data-action="modal#closeModal"
+                                    data-modal-target="modal">
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit"
