--- a/app/apps/main/templates/melding/part_taak_verwijderen.html
+++ b/app/apps/main/templates/melding/part_taak_verwijderen.html
@@ -11,7 +11,7 @@
             <button type="button"
                     class="btn-close"
                     aria-label="Sluit"
-                    data-action="detail#closeModal"></button>
+                    data-action="modal#closeModal"></button>
         </div>
         <div class="modal-body">
             <form action="{% url 'taak_verwijderen' melding.uuid %}"
@@ -24,7 +24,7 @@
                 {{ form.taaktype|render_rotterdam_formulier }}
                 <div class="form-control__with-helptext">{{ form.bericht|render_rotterdam_formulier }}</div>
                 <div class="form-row btn-row">
-                    <button type="reset" class="btn btn-tertiary" data-action="detail#closeModal">
+                    <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
                         <span>Annuleren</span>
                     </button>
                     <button type="submit" class="btn btn-action">
