mor-338: medewerker gegevens bekijken rechten

--- a/app/apps/main/templates/melding/part_gebruiker_modal_link.html
+++ b/app/apps/main/templates/melding/part_gebruiker_modal_link.html
@@ -1,4 +1,4 @@
-{% if gebruiker %}
+{% if gebruiker and perms.authorisatie.medewerker_gegevens_bekijken %}
     <dt>{{ tekst }}</dt>
     <dd>
         <a href=""
