--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -3,7 +3,7 @@
     top: 35px;
     height: 100%;
     overflow: hidden;
-    z-index: 20000;
+    z-index: 2090;
     pointer-events: none;
 
     @media (min-width: map-get($grid-breakpoints, lg)) {
@@ -160,6 +160,11 @@
             > * {
                 pointer-events: none;
             }
+
+            &:focus {
+                outline: none !important;
+                background-color: $gray-100;
+            }
         }
 
         &.warning {
@@ -298,6 +303,7 @@
         // opacity: 0;
         overflow: visible;
         pointer-events: none;
+        font-size: 1em;
 
         .notification {
             animation: slide-in-from-bottom $transition-duration-default $transition-ease-default
@@ -329,8 +335,6 @@
                 forwards 0.5s;
 
             .notification {
-                font-size: 0.75em;
-
                 &.hide {
                     animation: slide-out-to-bottom $transition-duration-default
                         $transition-ease-default;
@@ -353,8 +357,13 @@
             flex: 0 1 auto;
             position: relative;
             max-width: 1em;
-            margin-top: calc(0.83em - 8px);
+            max-height: 1em;
+            margin-top: 0.83em;
             margin-right: -8px;
+            &:focus {
+                outline: none !important;
+                background-color: $gray-100;
+            }
         }
     }
 
@@ -371,7 +380,10 @@
                 padding: 0.2em 0.3em 0.1em;
                 border-radius: 4px;
 
-                &:hover {
+                &:hover,
+                &:focus {
+                    text-decoration: none;
+                    outline: none !important;
                     background-color: $gray-100;
                 }
 
@@ -380,9 +392,10 @@
                     color: $gray-800;
                     text-decoration: underline;
                     padding: 0.4em 0 0;
-                    &:hover {
+                    &:hover,
+                    &:focus {
                         color: $black;
-                        text-decoration: none;
+                        text-decoration: underline;
                         border-color: transparent;
                         background-color: transparent;
                     }
@@ -449,7 +462,7 @@
 
             &:hover {
                 color: $primary;
-                text-decoration: none;
+                text-decoration: underline;
             }
         }
         li {
@@ -487,7 +500,7 @@
             border-top: 0;
         }
         a {
-            font-size: 0.7em;
+            font-size: 0.88em;
 
             &.disabled {
                 display: none;
@@ -504,6 +517,7 @@
             justify-content: space-between;
             padding: 0.7em;
             background-color: $green-100;
+            border-bottom: 1px solid $white;
 
             > div {
                 flex: 1;
@@ -515,7 +529,7 @@
                 .initials {
                     width: 36px;
                     height: 36px;
-                    line-height: 40px;
+                    line-height: 44px;
                     background-color: $green-200;
                 }
             }
