--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_item.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_item.html
@@ -9,14 +9,15 @@
             class="{% if not notificatie_is_unwatched %} is-watched{% endif %} {{ notificatie.notificatie_niveau }}"
             data-notificaties--manager-target="snackOverzichtItem">
             <div class="container__icon">
-                {% comment %}
-            {% if notificatie.notificatie_niveau %}
-                {% with "public/notificaties/icons/"|add:notificatie.notificatie_niveau|add:".html" as template %}
-                    {% include template %}
-                {% endwith %}
-            {% endif %}
-                {% endcomment %}
-                <span class="initials">{% include "icons/notification.svg" %}</span>
+                <span class="initials">
+                    {% if notificatie.notificatie_niveau and notificatie.notificatie_niveau != 'info' %}
+                        {% with "public/notificaties/icons/"|add:notificatie.notificatie_niveau|add:".html" as template %}
+                            {% include template %}
+                        {% endwith %}
+                    {% else %}
+                        {% include "icons/notification.svg" %}
+                    {% endif %}
+                </span>
             </div>
             <div class="container__content">
                 <h3>{{ notificatie.titel }}</h3>
